--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 #root {
+  margin: 0 auto;
+}
+
+.container-xl {
   max-width: 1200px;
   margin: 0 auto;
-  text-align: center;
+  padding: 2rem;
 }
